Added new method to get stock recommendations for any symbol Other misc fixes

--- a/tests/TestConsoleApp/TestConsoleApp.csproj
+++ b/tests/TestConsoleApp/TestConsoleApp.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\OoplesFinance.YahooFinanceAPI.csproj" />
+    <ProjectReference Include="..\..\src\OoplesFinance.YahooFinanceAPI.csproj" />
   </ItemGroup>
 
 </Project>
