--- a/tests/UnitTests/OoplesFinance.YahooFinanceAPI.Tests.Unit.csproj
+++ b/tests/UnitTests/OoplesFinance.YahooFinanceAPI.Tests.Unit.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\OoplesFinance.YahooFinanceAPI.csproj" />
+    <ProjectReference Include="..\..\src\OoplesFinance.YahooFinanceAPI.csproj" />
   </ItemGroup>
 
 </Project>
