--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,11 +38,9 @@ jobs:
           src/bin/Release/*.nupkg
           src/bin/Release/*.snupkg
           
-    - name: Send Coverage to Codacy
-      if: "${{env.CODACY_PROJECT_TOKEN != ''}}"
-      env:
-        CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-      run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r OoplesFinance.YahooFinanceAPI.Coverage.xml
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+
 
   publish-sdk:
     name: Publish SDK Binaries
