--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
       uses: coverallsapp/github-action@1.1.3
       with:
         github-token: ${{ secrets.github_token }}
+        path-to-lcov: ${{ github.workspace }}/coverage/lcov.info
 
 
   publish-sdk:
