--- a/src/OoplesFinance.YahooFinanceAPI.csproj
+++ b/src/OoplesFinance.YahooFinanceAPI.csproj
@@ -8,17 +8,17 @@
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	<AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
 	<Title>Ooples Finance Yahoo Finance API</Title>
-	<Version>1.1.0</Version>
+	<Version>1.2.0</Version>
 	<Authors>ooples</Authors>
 	<Company>Ooples Finance</Company>
 	<Copyright>Ooples Finance LLC 2022-2023</Copyright>
-	<Description>A C# library to be able to scrape free stock market data from Yahoo Finance. Can get historical data, top trending stocks, capital gains, dividends, stock splits, stock recommendations and so much more! </Description>
+	<Description>A C# library to be able to scrape free stock market data from Yahoo Finance. Can get historical data, top trending stocks, capital gains, dividends, stock splits, stock recommendations and so much more! Supports at least 39 different types of data and many more coming soon! </Description>
 	<RepositoryType>git</RepositoryType>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	<NeutralLanguage>en-US</NeutralLanguage>
-	<PackageTags>yahoo; finance; stock; stocks; stock market; market; financial api; financial; financials; stock prices; stock api; yahoo finance</PackageTags>
+	<PackageTags>yahoo; finance; stock; stocks; stock market; market; financial api; financial; financials; stock prices; stock api; yahoo finance; scraping; scraper; web api; api</PackageTags>
 	<PackageProjectUrl>https://github.com/ooples/OoplesFinance.YahooFinanceAPI</PackageProjectUrl>
 	<PackageIcon>Favicon.jpg</PackageIcon>
 	<RepositoryUrl>https://github.com/ooples/OoplesFinance.YahooFinanceAPI</RepositoryUrl>
@@ -141,7 +141,6 @@
     </PackageReference>
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
-    <PackageReference Include="System.Text.Encodings.Web" Version="7.0.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.1" />
   </ItemGroup>
 
