--- a/tests/UnitTests/OoplesFinance.YahooFinanceAPI.Tests.Unit.csproj
+++ b/tests/UnitTests/OoplesFinance.YahooFinanceAPI.Tests.Unit.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageReference Include="Moq.Contrib.HttpClient" Version="1.4.0" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
